@@ -660,6 +660,103 @@
                     </object>
                 </object>
             </object>
+	    <object class="sizeritem">
+                <flag>wxALL|wxEXPAND</flag>
+                <border>5</border>
+                <option>0</option>
+                <object class="wxStaticBoxSizer" name="ScreenShotSizer" base="EditStaticBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <label>ScreenShot</label>
+                    <object class="sizeritem">
+                        <flag>wxEXPAND</flag>
+                        <border>0</border>
+                        <option>0</option>
+                        <object class="wxBoxSizer" name="sizer_23" base="EditBoxSizer">
+                            <orient>wxVERTICAL</orient>
+                            <object class="sizeritem">
+                                <flag>wxALL</flag>
+                                <border>5</border>
+                                <option>1</option>
+                                <object class="wxBoxSizer" name="ScreenShotLabelSizer" base="EditBoxSizer">
+                                    <orient>wxHORIZONTAL</orient>
+                                    <object class="sizeritem">
+                                        <flag>wxALIGN_CENTER_VERTICAL</flag>
+                                        <border>0</border>
+                                        <option>0</option>
+                                        <object class="wxStaticText" name="ScreenShotLabel" base="EditStaticText">
+                                            <attribute>1</attribute>
+                                            <label>Name:</label>
+                                        </object>
+                                    </object>
+                                </object>
+                            </object>
+                        </object>
+                    </object>
+                    <object class="sizeritem">
+                        <flag>wxEXPAND</flag>
+                        <border>0</border>
+                        <option>1</option>
+                        <object class="wxBoxSizer" name="sizer_16" base="EditBoxSizer">
+                            <orient>wxVERTICAL</orient>
+                            <object class="sizeritem">
+                                <flag>wxALL|wxEXPAND</flag>
+                                <border>5</border>
+                                <option>1</option>
+                                <object class="wxBoxSizer" name="sizer_17" base="EditBoxSizer">
+                                    <orient>wxHORIZONTAL</orient>
+                                    <object class="sizeritem">
+                                        <flag>wxLEFT</flag>
+                                        <border>5</border>
+                                        <option>1</option>
+                                        <object class="wxTextCtrl" name="ScreenShotFilename" base="EditTextCtrl">
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <border>0</border>
+                                        <option>0</option>
+                                        <object class="wxTextCtrl" name="ScreenShotCounter" base="EditTextCtrl">
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxTOP|wxBOTTOM|wxEXPAND</flag>
+                                        <border>5</border>
+                                        <option>0</option>
+                                        <object class="wxBoxSizer" name="sizer_24" base="EditBoxSizer">
+                                            <orient>wxHORIZONTAL</orient>
+                                            <object class="sizeritem">
+                                                <flag>wxRIGHT|wxALIGN_CENTER_VERTICAL</flag>
+                                                <border>5</border>
+                                                <option>1</option>
+                                                <object class="wxStaticText" name="label_5" base="EditStaticText">
+                                                    <attribute>1</attribute>
+                                                    <label>.png</label>
+                                                </object>
+                                            </object>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxLEFT|wxRIGHT</flag>
+                                        <border>5</border>
+                                        <option>0</option>
+                                        <object class="wxButton" name="BrowseScreenShotButton" base="EditButton">
+                                            <label>...</label>
+                                            <size>20, -1</size>
+                                        </object>
+                                    </object>
+                                    <object class="sizeritem">
+                                        <flag>wxLEFT|wxRIGHT</flag>
+                                        <border>5</border>
+                                        <option>0</option>
+                                        <object class="wxButton" name="ScreenShotButton" base="EditButton">
+                                            <label>Grab</label>
+                                        </object>
+                                    </object>
+                                </object>
+                            </object>
+                        </object>
+                    </object>
+                </object>
+            </object>
         </object>
     </object>
 </application>
