@@ -1,4 +1,11 @@
-$Id: ChangeLog,v 1.81 2004/09/26 09:50:00 h_oudejans Exp $
+$Id: ChangeLog,v 1.82 2004/10/01 16:49:46 h_oudejans Exp $
+
+2004-10-02 Herman Oudejans
+	* Added Screenshot support
+
+2004-10-02 Manuel Bilderbeek <manuel@msxnet.org>
+	* Changed the order of video controls
+	* Fixed capitalisation issues
 
 2004-10-01 Herman Oudejans <hn.oudeans@quicknet.nl>
 	* Added 'type' command support.
